--- a/src/components/note-preview/note-preview.module.scss
+++ b/src/components/note-preview/note-preview.module.scss
@@ -18,8 +18,10 @@
 }
 
 .notePreview {
+  width: 25%;
+  flex-shrink: 0;
   position: relative;
-  margin: 15px 0;
+  margin: 15px 20px 15px 0;
   padding: 20px;
   border-radius: 15px;
   background: #fff;
