added a preview of list and the ability to change list from the modal window

--- a/src/components/note-preview/note-preview.module.scss
+++ b/src/components/note-preview/note-preview.module.scss
@@ -17,18 +17,18 @@
   transition: opacity .3s;
 }
 
-.notePreview {
+.notePreviewBox {
   width: 25%;
   flex-shrink: 0;
   position: relative;
   margin: 15px 20px 15px 0;
-  padding: 20px;
-  border-radius: 15px;
+  border-radius: 25px;
   background: #fff;
   box-shadow: 0 0 2px rgba(0, 0, 0, .3);
   transition: box-shadow .3s;
 
   &:hover {
+    border: 2px solid #333;
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
 
     .mark {
