--- a/src/components/bottom-panel/bottom-panel.module.scss
+++ b/src/components/bottom-panel/bottom-panel.module.scss
@@ -1,5 +1,7 @@
 .noteBottomPanel {
-  background: rgba(0, 0, 0, .3);
+  display: flex;
+  align-items: flex-start;
+  // background: rgba(0, 0, 0, .3);
 }
 
 .bgColorBox {
