--- a/src/components/note-preview/simple-note-preview/simple-note-preview.module.scss
+++ b/src/components/note-preview/simple-note-preview/simple-note-preview.module.scss
@@ -13,6 +13,27 @@
 }
 
 .NoteBottomPanel {
-  opacity: 0;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  // opacity: 0;
   transition: opacity .3s;
+}
+
+.notePreview {
+  min-height: 100px;
+  flex-shrink: 0;
+  position: relative;
+  padding: 20px;
+  background: #fff;
+
+  &:hover {
+    box-shadow: 0 0 10px rgba(0, 0, 0, .3);
+  }
+}
+
+.notePreview {
+  &:hover {
+  }
 }
