some refactoring and build  basis for firebase.storage

--- a/src/components/common/choose-color/choose-color.scss
+++ b/src/components/common/choose-color/choose-color.scss
@@ -1,7 +1,7 @@
 .choose-color {
   position: relative;
-  background: red;
-  border: 1px solid #333;
+  cursor: pointer;
+  color: #333;
 
   &__box {
     position: absolute;
