--- a/src/components/add-notes-panel/add-notes-panel.scss
+++ b/src/components/add-notes-panel/add-notes-panel.scss
@@ -3,9 +3,9 @@
   width: 100%;
   margin: 0 auto;
   position: relative;
-  display: flex;
-  box-shadow: 0 0 3px rgba(0, 0, 0, .3);
-  border-radius: 10px;
+  // display: flex;
+  box-shadow: 0 1px 2px 0 rgba(60,64,67,0.302), 0 2px 6px 2px rgba(60,64,67,0.149);
+  border-radius: 8px;
 
     
   &__icon {
@@ -35,9 +35,13 @@
   
 
   &__textarea {
-    padding: 10px;
+    padding: 12px 16px 12px 16px;
     width: 100%;
     text-align: left;
     cursor: text;
+    font: 14px/1 'Ruda', sans-serif;
+    letter-spacing: 0.02em;
+    font-weight: bold;
+    color: #888;
   }
 }
