--- a/src/components/common/note-bottom-panel/note-bottom-panel.scss
+++ b/src/components/common/note-bottom-panel/note-bottom-panel.scss
@@ -1,6 +1,8 @@
 .note-bottom-panel {
   display: flex;
-  background: rgba(0, 0, 0, .3);
+  
+  padding: 15px 15px;
+  // background: rgba(0, 0, 0, .3);
 
   &__icon {
     margin-left: 10px;
