--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -1,21 +1,16 @@
 .header {
+  padding: 10px 0;
   z-index: 100;
   position: fixed;
   top: 0; left: 0; right: 0;
   background: #fff;
-  padding: 10px;
   color: #333;
   // box-shadow: 0 0 3px rgba(0, 0, 0, .3);
   border-bottom: 1px solid rgba(0, 0, 0, .2);
-}
 
-.main {
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
-}
-
-.logo {
-  width: 40px;
-  margin-right: 15px;
+  &__main {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+  }
 }
