added choose-color items

--- a/src/components/note-preview/note-preview-content/note-preview-content.module.scss
+++ b/src/components/note-preview/note-preview-content/note-preview-content.module.scss
@@ -13,14 +13,27 @@
 }
 
 .notePreview {
-  min-height: 100px;
+  margin: 8px;
+  width: 273px;
+  flex-shrink: 0;
+  position: relative;
+  border-radius: 8px;
+  background: #fff;
+  box-shadow: 0 0 2px rgba(0, 0, 0, .3);
+  transition: box-shadow .3s;
   flex-shrink: 0;
   position: relative;
   background: #fff;
+  transition: background-color .5s;
 
   &:hover {
     box-shadow: 0 0 10px rgba(0, 0, 0, .3);
   }
+}
+
+.notePreviewWrap {
+  
+  overflow: hidden;
 }
 
 .notePreview {
