--- a/src/components/all-notes/all-notes.scss
+++ b/src/components/all-notes/all-notes.scss
@@ -3,7 +3,15 @@
     display: flex;
     flex-wrap: wrap;
     align-items: flex-start;
-    margin: 0 -8px;
+    margin-left: -1%;
+
+    @media (max-width: 1199px) {
+      margin-left: -1.5%;
+    }
   }
   
+}
+
+.ggg {
+  width: 100%;
 }
