--- a/src/components/common/list/form/form.module.scss
+++ b/src/components/common/list/form/form.module.scss
@@ -1,8 +1,10 @@
 .form {
-  padding: 10px 9px 9px 9px;
+  padding: 3px 16px;
   font-size: 14px;
   display: flex;
   align-items: center;
+  border-top: 1px solid rgba(#000, .1);
+  border-bottom: 1px solid rgba(#000, .1);
 }
 
 .formInput {
@@ -14,5 +16,10 @@
   width: 100%;
   // background: url(../../../assets/images/plus-symbol.1.svg) no-repeat;
   background-size: 12px 100%;
-  padding-left: 23px;
+  padding-left: 5px;
+}
+
+.icon {
+  font-size: 10px;
+  color: #a9a9a9;
 }
