--- a/src/components/common/fix-mark/fix-mark.module.scss
+++ b/src/components/common/fix-mark/fix-mark.module.scss
@@ -1,5 +1,9 @@
 .fixMark {
-  position: absolute;
-  top: 12px;
-  right: 14px;
+  cursor: pointer;
+  text-shadow: 0px 0px 3px #fff;
+  color: #333;
+}
+
+.check {
+  color: #c400f9;
 }
