--- a/src/components/add-notes-panel/add-notes-panel.module.scss
+++ b/src/components/add-notes-panel/add-notes-panel.module.scss
@@ -1,4 +1,5 @@
 .notesPanel {
+  overflow: hidden;
   max-width: 600px;
   width: 100%;
   margin: 0 auto 50px;
@@ -7,3 +8,9 @@
   box-shadow: 0 1px 2px 0 rgba(60,64,67,0.302), 0 2px 6px 2px rgba(60,64,67,0.149);
   border-radius: 8px;
 }
+
+.img {
+  display: flex;
+  flex-direction: column;
+}
+
