--- a/src/components/add-notes-panel/note-panel-view/note-panel-view.module.scss
+++ b/src/components/add-notes-panel/note-panel-view/note-panel-view.module.scss
@@ -4,3 +4,13 @@
   justify-content: space-between;
   align-items: center;
 }
+
+.img {
+  width: 100%;
+}
+
+.fixMark {
+  position: absolute;
+  top: 12px;
+  right: 14px;
+}
