fix imgs modal bags

--- a/src/components/all-notes/all-notes.module.scss
+++ b/src/components/all-notes/all-notes.module.scss
@@ -4,6 +4,7 @@
   pointer-events: none;
   user-select: none;
   width: 100%;
+  padding-bottom: 20px;
   text-align: center;
   font: 16px/1.2 $Arial;
   color: rgba(#000, .5);
