--- a/src/components/modal-box/modal-box.module.scss
+++ b/src/components/modal-box/modal-box.module.scss
@@ -1,9 +1,9 @@
-.ddd {
+.overlay {
   position: fixed;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(#e5e5e5, .7);
   z-index: 100;
+  background-color: rgba(#e5e5e5, .75);
 }
