added fonts to note-panel textarea

--- a/src/components/common/note-panel/note-panel.module.scss
+++ b/src/components/common/note-panel/note-panel.module.scss
@@ -10,4 +10,9 @@
   outline: none;
   resize: none;
   height: 2em;
+  letter-spacing: .01428571em;
+  font-family: Roboto,Arial,sans-serif;
+  font-size: .875rem;
+  font-weight: 400;
+  line-height: 1.25rem;
 }
